--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,11 @@ body {
     background-image: url("file:///C:/Users/jenni/Desktop/Basic-Portfolio/assets/images/concrete_seamless.png");
     font-size: 18px;
     }
-    
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
 header { 
     color: #666666;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -31,6 +35,7 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: normal;
+    line-height: 30px;
     background: #ffffff;
 }
 
@@ -38,7 +43,7 @@ header {
     float:left;
     padding: 20px;
     margin-top: -20px;
-    margin-left:33px;
+    margin-left:277px;
     height: 30px;
     color: #ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -54,6 +59,9 @@ main {
     color: #4aaaa5;
     border-color: #cccccc;
     width: 960px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
       
 }
 
@@ -63,8 +71,9 @@ main {
     padding: 2px;
     margin: 2px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 28px;
+    font-size: 16px;
     font-weight: 700;
+    line-height: 24px;
     width: 20%;
     background-color: #ffffff;
     }
@@ -98,23 +107,23 @@ main {
     text-align: left;
     }
 
-#yourName {
+.yourName {
         width: 916px;
         margin-top: 8px;
       }
       
-#mail {
+.mail {
         width: 916px;
         margin-top: 8px;
       }
       
-#msg {
+.msg {
         width: 916px;
         height: 150px;
         margin-top: 8px;
       }
 
-.styled {
+.btn {
     height: 40px;
     width: 80px;
     line-height: 2;
@@ -126,32 +135,39 @@ main {
     }
 
 .gallery {
-    position: relative;
     width: 600px;
-    background-color: #eee;
+    height: 800px;
+    background-color: #fff;
+    
 }
 
 .containerItems {
+    position: relative;
     background-color: #eee;
 }
 
-.item-left {
+.bars {
+    background: #777777;
+    position: absolute;
     float: left;
-    padding: 10px;
-    margin: 10px;
-    right: -20px;
+        height: 40px;
+    width: 256px;
+    top: 150px;
+    color: #ccc; 
+    font-family: inherit;
+    line-height: 40px;
 }
-
-.item-right {
+.pictures {
     float: left;
+    position: relative;
     padding: 10px;
     margin: 10px;
-    right: -20px;
+   right: -20px;
 }
 
 footer { 
     clear: both;
-    height: 40px;
+    height: 50px;
     padding: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -160,9 +176,9 @@ footer {
         }
     
 .bottomBorder { 
-    clear: both;
-    float: bottom;
-    height: 32px;
+    /*clear: both;
+    float: bottom;*/
+    height: 6px;
     padding: 2px;
     margin-top: 0px;
     margin-bottom: 8px;
