--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,9 @@ main {
     background-color: #ffffff;
     }
 
+    p {margin: 0px;
+    line-height: 24px;}
+
 .image {
     clear: both;
     float: left;
@@ -167,6 +170,7 @@ main {
 
 footer { 
     clear: both;
+    
     height: 50px;
     padding: 0px;
     margin-right: 0px;
@@ -176,8 +180,7 @@ footer {
         }
     
 .bottomBorder { 
-    /*clear: both;
-    float: bottom;*/
+    
     height: 6px;
     padding: 2px;
     margin-top: 0px;
