--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 body { 
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     margin-top:0px;
@@ -5,8 +10,10 @@ body {
     margin-left:0px;
     color: #777777;
     text-align: center;
-    background-image: url("file:///C:/Users/jenni/Desktop/Basic-Portfolio/assets/images/concrete_seamless.png");
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
     font-size: 18px;
+    width: 960px;
+    margin: 0 auto;
     }
 
 a {
@@ -18,7 +25,7 @@ header {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 28px;
     font-weight: 700;
-    height: 30px;
+    height: 75px;
     margin-top:0px;
     margin-left:0px;
     margin-right:0px;
@@ -41,10 +48,11 @@ header {
 
 .name { 
     float:left;
+    position: absolute;
     padding: 20px;
     margin-top: -20px;
-    margin-left:277px;
-    height: 30px;
+    margin-left:10px;
+    height: 75px;
     color: #ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 28px;
@@ -71,20 +79,21 @@ main {
     padding: 2px;
     margin: 2px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 16px;
+    font-size: 28px;
     font-weight: 700;
-    line-height: 24px;
+    line-height: 42px;
     width: 20%;
     background-color: #ffffff;
     }
 
-    p {margin: 0px;
+    p     
+    {margin: 0px;
     line-height: 24px;}
 
 .image {
     clear: both;
     float: left;
-    margin: 20px;
+    margin: 10px;
     }
 
 .bar { 
@@ -153,11 +162,11 @@ main {
     background: #777777;
     position: absolute;
     float: left;
-        height: 40px;
+    height: 40px;
     width: 256px;
     top: 150px;
-    color: #ccc; 
-    font-family: inherit;
+    color: #eee; 
+    font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 40px;
 }
 .pictures {
@@ -170,7 +179,7 @@ main {
 
 footer { 
     clear: both;
-    
+    position: relative;
     height: 50px;
     padding: 0px;
     margin-right: 0px;
@@ -180,11 +189,11 @@ footer {
         }
     
 .bottomBorder { 
-    
+    position: relative;
     height: 6px;
     padding: 2px;
     margin-top: 0px;
-    margin-bottom: 8px;
+    margin-bottom: 0px;
     background: #4aaaa5;
     }
     
