--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,37 @@
-* {
+* { 
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+html {
+    height: 100%;
+    margin: 0;
+}
 body { 
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    margin-top:0px;
-    margin-right:0px;
-    margin-left:0px;
     color: #777777;
     text-align: center;
     background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
     font-size: 18px;
-    width: 960px;
+    min-height: 100%;
+    display: block;
+    height: 100%;
     margin: 0 auto;
-    }
-
-a {
+    overflow: scroll;
+}
+div {
+    position: relative;
+}
+.wrapper {
+    min-height: 100%;
+}
+a { 
     color: inherit;
     text-decoration: none;
+}
+a:hover {
+    font-size: 24px;
+    text-shadow: 1px 1px 1px #444444;;
 }
 header { 
     color: #666666;
@@ -33,7 +46,6 @@ header {
     background: #ffffff;
     border-color: #cccccc;
 }
-
 .links { 
     clear: both;
     float:right;
@@ -42,16 +54,22 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: normal;
-    line-height: 30px;
     background: #ffffff;
 }
-
+li {
+    display: inline-block;
+    border-right: 1px solid #ccc;
+    padding: 0 .2em;
+}
+li:last-child { 
+    border: 0; 
+} 
 .name { 
     float:left;
     position: absolute;
     padding: 20px;
     margin-top: -20px;
-    margin-left:10px;
+    margin-left:136px;
     height: 75px;
     color: #ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -59,7 +77,6 @@ header {
     font-weight: 700;
     background: #4aaaa5;
 }
-          
 main { 
     background: #ffffff;
     padding: 20px;
@@ -70,9 +87,7 @@ main {
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
-      
 }
-
 .aboutMe { 
     clear: both;
     float: left;
@@ -84,18 +99,16 @@ main {
     line-height: 42px;
     width: 20%;
     background-color: #ffffff;
-    }
-
-    p     
-    {margin: 0px;
-    line-height: 24px;}
-
+}
+p {
+    margin: 0px;
+    line-height: 24px;
+}
 .image {
     clear: both;
     float: left;
     margin: 10px;
-    }
-
+}
 .bar { 
     clear: both;
     padding: .5px;
@@ -103,7 +116,6 @@ main {
     margin-left: 20px;
     background: #cccccc;
 }
-
 .bio {
     padding: 2px;
     margin: 20px;
@@ -111,30 +123,20 @@ main {
     color: #777777;
     text-align: left;
 }
-
 .formGroup {
     padding: 20px;
     font-size: 14px;
     color: #777777;
     text-align: left;
-    }
-
-.yourName {
-        width: 916px;
-        margin-top: 8px;
-      }
-      
-.mail {
-        width: 916px;
-        margin-top: 8px;
-      }
-      
+}
+.yourName, .mail, .message, .msg {
+    width: 880px;
+    margin-top: 8px;
+    color: inherit;
+}
 .msg {
-        width: 916px;
-        height: 150px;
-        margin-top: 8px;
-      }
-
+    height: 150px;
+}
 .btn {
     height: 40px;
     width: 80px;
@@ -144,20 +146,16 @@ main {
     color: #eee;
     background-color: #4aaaa5;
     border-color: #cccccc;
-    }
-
+}
 .gallery {
     width: 600px;
     height: 800px;
     background-color: #fff;
-    
 }
-
 .containerItems {
     position: relative;
     background-color: #eee;
 }
-
 .bars {
     background: #777777;
     position: absolute;
@@ -174,28 +172,30 @@ main {
     position: relative;
     padding: 10px;
     margin: 10px;
-   right: -20px;
+    right: -20px;
 }
-
+.push {
+    height: 50px;
+}
 footer { 
     clear: both;
     position: relative;
-    height: 50px;
+    height: 10px;
     padding: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    background: #666666;
-        }
-    
-.bottomBorder { 
-    position: relative;
-    height: 6px;
+    background: #4aaaa5;
+}
+.topBar {
+    height: 10px;
+}
+.bottomBar { 
+    height: 50px;
     padding: 2px;
     margin-top: 0px;
-    margin-bottom: 0px;
-    background: #4aaaa5;
-    }
+    background: #777777;
+    color: #eee;
+    font-size: 14px;
+    line-height: 50px;
+}
     
 
     
